--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
    </div>
 
+   <div>
+    <h3 id="city-name">India</h3>
+    <h3 id="city-time">India</h3>
+    <h3 id="city-temp">India</h3>
+   </div>
+
    <script src="script.js"></script>
 </body>
 </html> 
